--- a/budget/static/css/styles.css
+++ b/budget/static/css/styles.css
@@ -10,7 +10,7 @@ h1,h6{
   font-weight:bold;
 }
 .row{
-  margin:0! important;
+  margin:0;! important;
 }
 /*project list (no projects)*/
 .noproject-wrapper{
@@ -38,14 +38,14 @@ form ul li.category{
 }
 @media(max-width:992px){
   .section-stats h1{
-    font-size:calc(16px+6vw);
+    font-size:calc(16px + 6vw);
   }
 }
 /* project detail expenses */
 .section-expenses button{
   padding:0px 40px;
   font-weight:bold;
-  text-shadow: 0px 3px 4 px rgba(0,0,0,.25);
+  text-shadow: 0px 3px 4px rgba(0,0,0,.25);
   background-color:#6FCF97;
 }
 .section-expenses .expense{
@@ -58,4 +58,8 @@ form ul li.category{
 }
 .section-expenses li:nth-child(even) .expense{
   background-color:#F2F2F2;
+}
+.section-expenses .close-icon:hover {
+  cursor:pointer;
+
 }
